2008-03-28  Ian Jackson  <ian@davenant.greenend.org.uk>,
            Guillem Jover  <guillem@debian.org>

	* src/main.h (maintainer_script_postinst): New prototype.
	* src/help.c (post_script_tasks): New function.
	(maintainer_script_installed): Renamed to ...
	(vmaintainer_script_installed): ... this. Dot not call
	ensure_diversions.
	(maintainer_script_installed): New function.
	(maintainer_script_postinst): Likewise.
	(maintainer_script_new): Call post_script_tasks instead of directly
	calling ensure_diversions.
	(maintainer_script_alternative): Likewise.
	* src/cleanup.c (cu_prermupgrade): Use maintainer_script_postinst
	instead of maintainer_script_installed.
	(cu_prermdeconfigure): Likewise.
	(cu_prerminfavour): Likewise.
	(cu_prermremove): Likewise.
	(deferred_configure): Likewise.
	* src/configure.c (deferred_configure): Likewise.

2008-03-28  Ian Jackson  <ian@davenant.greenend.org.uk>,
            Guillem Jover  <guillem@debian.org>

	* src/main.h (post_postinst_tasks): New prototype.
	* src/help.c (post_postinst_tasks): New function.
	* src/cleanup.c (cu_prermupgrade): Use post_postinst_tasks instead of
	duplicate code.
	(cu_prermdeconfigure): Likewise.
	(cu_prerminfavour): Likewise.
	(cu_prermremove): Likewise.
	* src/configure.c (deferred_configure): Likewise.

2008-03-28  Guillem Jover  <guillem@debian.org>

	* src/packages.c (process_queue): Fix typo in comment.

2008-03-28  Ian Jackson  <ian@davenant.greenend.org.uk>

	* src/help.c (statusstrings): Improve Breaks message by saying that
	it can be in that status due to a failed installation.

2008-03-29  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-buildpackage.pl: If the user request a cross-compilation,
	then define PKG_CONFIG_LIBDIR so that it will look in directories
	specidic to the target architecture.
	* man/dpkg-buildpackage.1: Document this change and also the -t option.

2008-03-28  Raphael Hertzog  <hertzog@debian.org>
