@@ -1,3 +1,10 @@
+2008-03-28  Ian Jackson  <ian@davenant.greenend.org.uk>
+
+	* src/help.c (cu_post_script_tasks): New function.
+	(do_script): Install cu_post_script_tasks as a cleanup handler.
+	(maintainer_script_alternative): Call post_script_tasks if the
+	first do_script invokation fails instead of it succeeding.
+
 2008-03-28  Ian Jackson  <ian@davenant.greenend.org.uk>,
             Guillem Jover  <guillem@debian.org>
 
